--- a/styles.css
+++ b/styles.css
@@ -13,8 +13,7 @@ header {
     color: rgb(243, 144, 78);
     display: flex;
     align-items: center;
-    gap: 20px; /* Espaço entre a logo e o texto */
-}
+    gap: 20px; 
 
 
 .chamada {
@@ -66,5 +65,5 @@ p{
 }
 
 .logo-site {
-    height: 50px; /* Ajuste conforme o tamanho desejado */
+    height: 50px;
 }
