--- a/styles.css
+++ b/styles.css
@@ -13,7 +13,8 @@ header {
     color: rgb(243, 144, 78);
     display: flex;
     align-items: center;
-    gap: 20px; 
+    gap: 20px; /* Espaço entre a logo e o texto */
+}
 
 
 .chamada {
@@ -30,7 +31,6 @@ header {
 
 h1 {
     font-size: 40px;
-    font-family: "Federant", sans-serif;
 }
 
 p{
@@ -65,5 +65,5 @@ p{
 }
 
 .logo-site {
-    height: 50px;
+    height: 50px; /* Ajuste conforme o tamanho desejado */
 }
